fix header text not being in the middle on mobile

--- a/source/css/master.css
+++ b/source/css/master.css
@@ -331,6 +331,7 @@ body{
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
+		align-items: center;
 
 		&.hide{
 			display: none;
